영상 샘플의 안면 인식 등 기능 추가

--- a/WindowsFormsOpenCVApplication1/WindowsFormsOpenCVApplication3/WindowsFormsOpenCVApplication3.csproj
+++ b/WindowsFormsOpenCVApplication1/WindowsFormsOpenCVApplication3/WindowsFormsOpenCVApplication3.csproj
@@ -109,6 +109,9 @@
     <Content Include="haarcascade_frontalface_default.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="smile.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
